<resources>
    <string name="app_name">tugasUASprogetch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scoree" />
    <string name="title_score">Score</string>
    <string name="title_setting">Setting</string>
    <string name="text_brand">Brand</string>
    <string name="text_places">Places</string>
    <string name="text_people">People</string>
    <string name="text_animal">Animal</string>
    <string name="t" />
    <string name="text_sport">Sport</string>
    <string name="text_food"><![CDATA[Food & Drink]]></string>
</resources>
